java11 upgrade
Spring 5.2.6.RELEASE
Spring security 5.3.2.RELEASE
Hiberante 5.2.2.FINAL
Geo 20.5
Mockito 3.3.3
Struts 2.5.26
Jersey 2.31
asm 8.0.1
JTS 1.16.1
Jackson 2.11